# pixel-agents-tui

./: Cargo.toml  README.md
.claude-plugin/: marketplace.json
docs/plans/: 2026-02-24-pixel-agents-tui-design.md  2026-02-24-pixel-agents-tui-implementation.md
openspec/: config.yaml
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
src/: app.rs  lib.rs  main.rs
src/state/: agent.rs  mod.rs  sdd.rs
src/terminal/: detect.rs  mod.rs
src/ui/: layout.rs  mod.rs  sprites.rs
src/watcher/: discovery.rs  file_watcher.rs  mod.rs  parser.rs  types.rs
tests/: integration.rs
