[package]
name = "pixel-agents-tui"
version = "0.1.0"
edition = "2021"
description = "TUI dashboard for visualizing Claude Code agents as pixel art characters"
license = "MIT"
repository = "https://github.com/Dsantiagomj/pixel-agents-tui"
homepage = "https://github.com/Dsantiagomj/pixel-agents-tui"
readme = "README.md"
keywords = ["tui", "claude", "pixel-art", "terminal", "agents"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
